# canada-tax-rag-assistant

./: .gitignore  main.py  pyproject.toml  requirements.txt
notebooks/: 01_explore.ipynb
