[project]
name = "canada-tax-rag-assistant"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.100.0",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "gradio>=6.14.0",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
